# solana-rust-study

./: .gitignore  Cargo.toml  README.md
Pinocchio金库/: Cargo.toml
Pinocchio金库/src/: lib.rs
anchor_real_counter/: Anchor.toml
anchor_real_counter/programs/anchor_real_counter/: Cargo.toml
anchor_real_counter/programs/anchor_real_counter/src/: lib.rs
anchor_real_counter/tests/: anchor_real_counter.ts
litesvm/anchor-example/: Anchor.toml
litesvm/anchor-example/programs/anchor-example/: Cargo.toml
litesvm/anchor-example/programs/anchor-example/src/: lib.rs
litesvm/anchor-example/tests/: anchor-example.ts
litesvm/ts/: README.md  package-lock.json  package.json
litesvm/ts/tests/: litesvm.test.ts
pinocchio_lessons/: README.md
pinocchio_lessons/pinocchio_counter/: Cargo.toml
pinocchio_lessons/pinocchio_counter/src/: lib.rs
rust学习/: Cargo.toml  README.md
任务1-铸造SPL Token/: SLP.ts
任务2-Anchor金库/: Anchor.toml
任务2-Anchor金库/programs/blueshift_anchor_vault/src/: lib.rs
任务2-Anchor金库/tests/: test.ts
任务3-Anchor 托管/: Q&A.md  README.md  TESTING.md
任务3-Anchor 托管/.agent/rules/: wsl.md
任务3-Anchor 托管/app/: package-lock.json  package.json
任务3-Anchor 托管/app/src/: App.css  App.tsx  idl.json
任务3-Anchor 托管/app/src/components/: WalletContextProvider.tsx
任务3-Anchor 托管/app/src/utils/: anchor.ts
任务3-Anchor 托管/blueshift_anchor_escrow/: Anchor.toml
任务3-Anchor 托管/blueshift_anchor_escrow/.kiro/steering/: rule.md
任务3-Anchor 托管/blueshift_anchor_escrow/programs/blueshift_anchor_escrow/: Cargo.toml
任务4-Pinocchio金库/: pinocchio_vs_anchor.md
(+7 files in other folders)
